@@ -9,6 +9,8 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - SDL surface handle now available from Brandy_GetVideoDriver in R5.
 - Raise function now handles invalid values gracefully. Range is slightly
   more permissive than BASIC I-V, but closely matches BASIC VI.
+- Add option to use SW surface on command line, and allow brandy-apps to
+  accept some command line options.
 
 * V1.22.3 - 29 November 2019
 - Fix stack and array regressions caused by the 64-bit int work.
